fixed mobile version and text alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -44,7 +44,6 @@ h2 {
   font-size: 40px;
 }
 p {
-  display: flex;
   margin: 0;
   font-size: 30px;
   font-weight: 300;
@@ -135,7 +134,7 @@ a {
   display: flex;
   justify-content: space-around;
 }
-@media only screen and (max-device-width: 1000px) and (min-device-width: 480px) {
+@media only screen and (max-device-width: 1000px) {
   .project-container {
     display: flex;
     flex-wrap: wrap;
@@ -168,7 +167,7 @@ hr {
 .hamburger:focus {
   outline: 0;
 }
-@media only screen and (max-device-width: 1000px) and (min-device-width: 480px) {
+@media only screen and (max-device-width: 1000px) {
   .hamburger {
     display: block;
     border: 0;
